# cli-music-player

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md  THIRD_PARTY_NOTICES.md  build.rs
.config/config/: default.toml
.config/themes/: catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  system.toml
about/: about.toml
config/: default.toml
src/: main.rs
src/app/: event_loop.rs  mod.rs  mode_manager.rs  state.rs
src/audio/: capture.rs  cava.rs  fft.rs  mod.rs  smoother.rs  spectrum.rs
src/data/: about.rs  assets.rs  config.rs  mod.rs  playlist.rs  theme_loader.rs
src/playback/: local_player.rs  metadata.rs  mod.rs  mpris_client.rs  remote_fetch.rs
src/render/: cover_cache.rs  cover_renderer.rs  dominant_color.rs  kitty_graphics.rs  lyric_renderer.rs  mod.rs  oscilloscope_renderer.rs  spectrum_renderer.rs
src/ui/: borders.rs  mod.rs  theme.rs  tui.rs
src/ui/components/: control_buttons.rs  progress_bar.rs  volume_bar.rs
src/ui/panels/: info_panel.rs  playlist_panel.rs  visual_panel.rs
src/utils/: alsa.rs  ascii_art.rs  input.rs  kitty.rs  mod.rs  stderr_filter.rs  system_volume.rs  timefmt.rs
